still finishing up

--- a/ticket-mgt/package.json
+++ b/ticket-mgt/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.12.2",
     "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
