--- a/ticket-mgt/package.json
+++ b/ticket-mgt/package.json
@@ -7,7 +7,9 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run dev-server\" \"vite\"",
+    "dev:vite": "vite",
+    "dev-server": "node dev-server.cjs",
     "build": "vite build",
     "preview": "vite preview",
     "format": "prettier --write src/",
@@ -15,6 +17,8 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
@@ -22,6 +26,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "concurrently": "^8.2.2",
     "prettier": "3.6.2",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3"
