--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
+  base = "ticket-mgt"
   publish = "dist"
   functions = "netlify/functions"
+  command = "npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
