--- a/ticket-mgt/netlify.toml
+++ b/ticket-mgt/netlify.toml
@@ -18,4 +18,7 @@
   status = 200
 
 [functions]
-  node_modules_includes = ["express"]
+  [functions.node_modules_includes]
+    external_node_modules = [
+      "express"
+    ]
