--- a/ticket-mgt/package.json
+++ b/ticket-mgt/package.json
@@ -18,8 +18,9 @@
   "dependencies": {
     "axios": "^1.12.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "json-server": "^1.0.0-beta.3",
+    "serverless-http": "^4.0.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "vue-toastification": "^2.0.0-rc.5"
